--- a/External Exam 30 March 2022/decisionTree.ipynb
+++ b/External Exam 30 March 2022/decisionTree.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "name": "decisionTree.ipynb",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPel+de+DrfFQqhRGp9QdjY",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/TKM-MCA-2020-DATA-SCIENCE-LAB/20MCA301-ABHILASH_JOHN/blob/master/External%20Exam%2030%20March%202022/decisionTree.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
